--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "homepage": "https://github.com/Manu404/sheet-website#readme",
   "dependencies": {
     "bootstrap": "^4.5.3",
-    "jquery": "^1.12.4",
+    "holderjs": "^2.9.7",
+    "jquery": "^3.5.1",
+    "jquery-ui-dist": "^1.12.1",
+    "jquery-ui-touch-punch": "^0.2.3",
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
